# ardrone2_vision

./: .gitmodules
IC/: .gitignore
IC/drone/: CMakeLists.txt  downloadvids.sh  initdrone.sh  transfer.sh
IC/pc/: .gitignore  CMakeLists.txt  copy.sh  distribtuion_buf_pointer.xml  distribtuion_buffer.xml  distribution_buf_pointer.xml  distribution_buf_size.xml  distribution_buffer.xml  graph_buffer.xml  groundtruth_buffer.xml
IC/pc-gui/: CMakeLists.txt
IC/pc/vliegbiebtraining/: distribtuion_buffer.xml  groundtruth_buffer.xml
IC/src/: Delfly.cpp  Delfly.h  Delfly_wifi.cpp  Delfly_wifi.h  DuoWebcam.cpp  DuoWebcam.h  Filecam.cpp  Filecam.h  IC.cpp  StereoAlg.cpp  StereoAlg.h  ardronecam.cpp  defines.h  delfly.cpp  delfly_wifi.cpp  delfly_wifi.h  exporter.cpp  exporter.h  filecam.cpp  rs232.h  smoother.cpp  smoother.h  socket.cpp  socket.h  stereoalg.cpp  stereoalg.h  textons.cpp  textons.h
IC/src/Geiger_src/: elas.cpp
IC/src_gui/: stereo_calibrate.cpp
modules/OpticFlowHist/: opticflow_module.c
